Project Waste2Resources_no_attrs {
  database_type: 'PostgreSQL'
  Note: '''
    # Waste and resources spatial database
    This standard moves forward the digitalization process of resorices traceability.
    By demostrating how data can be organized and contained using a general but systematic method, 
    researchers and practitioners process..contributes to deliver sustainability practices
    by showing how to organize 
  '''
}



Table actor {
    actor_id int [pk, unique]
    //name varchar [note: 'Name of the entity actor']
    part_of int [ref: > actor.actor_id, note: 'Name parent enetity']
    //headquarter boolean [note: 'Primary office of operations']
    //private boolean [note: 'Boolean variable to indicate if its private']
    //public boolean [note: 'Boolean variable to indicate if its public']
    //pct_pub_owned int [note: 'Numeric variable that indicates the percentage of public ownership']
    //amount_members int [note: 'Variable that indicates the amount of memebers']
    //objective_descr varchar  [note: 'Description of aim of actor']
    //budget_yr int  [note: 'Yearly budget resources for opperations']
    //budget_month int [note: 'Monthly budget resources for opperations']
    //main_responsable int [note: 'Main point of contact. Full name']
    //responsable_econtact varchar [note: 'Mail of contact']
    //actor_url varchar [note: 'URL site of the actor']
    //address varchar [note: 'Full address of the actor location']
    //street_name varchar [note: 'Street name']
    //street_num int [note: 'Street number']
    //zip_code varchar [note: 'Zip code']
    //city varchar [note: 'City']
    //country varchar [note: 'Country']
    //longitude int [note: 'Longitude']
    //latitude int [note: 'Latitude']
    //geometry varchar [note: 'Geometry']
    //time_stamp timestamp [note: 'Last time updated']
    //updated_by varchar [note: 'Name of institution responsible for providing information']
    note: "This table contains information about the actor in the system. Attributes are general."
}


Table kpi  {
    kpi_id int [pk]
    followed_by_id int [ref: > actor.actor_id, note: 'Which actor is following the KPI'] 
    //kpi_name varchar [note: 'Name of the KPI']
    //kpi_anacronym varchar [note: 'Anacronym of the KPI']
    //kpi_value int [note: 'Current value of KPIs']
    //time_stamp timestamp [note: 'Publication date of value']
    //updated_by varchar [note: 'Name of institution responsible for its publication']
    note: "Table to keep track of KPIs and its values"
}

Table contract {
    contract_id int [pk, unique]
    solicitor_id int [ref: > actor.actor_id]
    contractor_id int [ref: > actor.actor_id]
    controlled_by_id int [ref: > actor.actor_id]
    //amount int
    //date_start timestamp
    //valid_until timestamp
    //job_description varchar
    //contract_url varchar
    //last_updated timestamp
    //updated_by varchar
}

Table message {
    message_id int [pk, unique]
    sent_by_id int [ref: > actor.actor_id]
    to_by_id int [ref: > actor.actor_id]
    //platform varchar [note: 'Platform of distribution']
    //message varchar [note: 'Message']
    //date_issued timestamp [note: 'Time stamp of message publication']
    //multimedia_url varchar [note: 'URL to point at multimedia file']
}







Table generator_actor {
    gen_id int [pk,unique]
    actor int [ref: > actor.actor_id]
    //q_members int
    //income int
    //activity_descr int
    //activity_code varchar
    //nace_code varchar
    //residential boolean
    //amount int
    //amount_unit varchar
    //waste_type varchar
    //low_code varchar
    //frequency_of_gen varchar 
    //last_updated timestamp
    //updated_by varchar    
    note: "Table to describe the role of generation by an actor"
}


// This represents the 
//change it to waste disposal
Table waste_generated {    
    placed_in int [ref: > waste_place.place_id]
    filled_by int [ref: > generator_actor.gen_id]
    regulated_by int [ref: > regulation.regulation_id]
    //amount_gen int
    //amount_unit varchar
    //waste_type varchar
    //product varchar
    //product_url varchar
    //low_code varchar
    //contamination boolean
    //contamination_type varchar
    //frequency_of_gen varchar
    //gen_time_stamp timestamp
    //close_raw_material varchar
    //image varchar 
    //date_gen_n_contain timestamp
    note: "Artificial table to represent waste that is being generated and put in containers, by agents"
}





Table waste_place {
    place_id int [pk]
    contaiers_in int [ref: < container.container_id]
    //name varchar
    //street_name varchar
    //streeet_number varchar
    //street_id int [note: "street link"]
    //geom int
    //entrance_long int
    //entrance_lat int
    //open_time int
    //close_time int
    //open_days varchar
    //with_staff boolean
    //staff_quantity int  
    //acceess_requirements int
    //web_site varchar
    //last_updated timestamp
    //updated_by varchar
    

}





Table container {
    container_id int [pk, unique, not null]
    //longitude int 
    //latitude int 
    //address varchar
    //street_name varchar
    //street_num int
    //street_id int
    //color int 
    //model varchar
    //producer varchar
    //producer_url varchar
    //capacity_vol int
    //capacity_vol_unit varchar
    //capacity_weight int
    //capacity_weight_unit varchar
    //waste_type varchar
    //hight int
    //width int
    //outdoors boolean
    //waste_desc varchar
    //waste_code varchar
    //model_url varchar
    //value int
    //image varchar
    //vandalized boolean
    //condition varchar
    //mobile_unit boolean
    //last_updated timestamp
    //updated_by varchar
}


Table deployment {
    contaiers_in int [ref: > container.container_id]
    //time_attached timestamp
    //time_deattached timestamp
    //status varchar

}







Table iot_device {
    iot_device_id in [pk, unique]
    attached_to int [ref: > container.container_id]
    //model varchar
    //value int
    //mantained_by varchar
    //responsability_of varchar
    //producer varcahr
    //documenataiton varchar
    //time_installed timestamp
    note: "One container can have many iot-devices. Documents information about iot device attached to a container"
}

Table iot_report {
    // iot_reporting_id int [pk]
    report_id int [pk, ref: > iot_device.iot_device_id]
    //time_stamp timestamp
    //temp int
    //open_lid boolean
    //capacity int
    //humidity int
    //status int
    //weight int    
}




Table mantainence_actor {
    mantain_id int [pk,unique]
    actor int [ref: > actor.actor_id]
    scheduled boolean
    type varchar
}



Table mantainence_job {
    job_id int [pk, unique]
    //job_time timestamp
    ordered_by int [ref: > mantainence_actor.mantain_id]
    place_mantained int [ref: > waste_place.place_id]
    done_with int [ref: > equipment.equip_id]
    //amount_unit varchar
    //waste_type varchar
    //low_code varchar
    //frequency_of_gen varchar
    //subject_of_law varchar
    //regulation_url varchar
    //image varchar    
    //last_updated timestamp
    //updated_by varchar    
}





Table transport_actor {
    transport_id int [pk,unique]
    actor int [ref: > actor.actor_id]

}




Table collection_routes {
    route_id int [pk]
    defined_by int [ref: > transport_actor.transport_id]
    //start_long int
    //start_lat int
    //end_long int
    //end_lat int
    //sequence int

}


Table service_zones {
    zone_id int [pk, unique]
    defined_by int [ref: > transport_actor.transport_id]
    //geom int
}


Table public_office {
    pub_office_id int [pk, unique]    
    actor int [ref: > actor.actor_id]
    //geom int
}




Table regulation {
    regulation_id int [pk, unique]
    defined_by int [ref: > public_office.pub_office_id]
    //regulation_name varchar
    //regulation_url varchar
    //regulation_created_by int [ref: > actor.actor_id]
    //date_issued timestamp
    //valid_until timestamp
    //last_updated timestamp
    //updated_by timestamp
}





Table waste_transfer  {
    collect_job_id int [pk]
    from_place int [ref: > waste_place.place_id]
    to_place int [ref: > waste_place.place_id]
    staff_id int [ref: > staff.staff_id]
    equip int [ref: > equipment.equip_id] 
    regulation int [ref: > regulation.regulation_id]
    //mode varchar
    //job_name varchar
    //transfer_amount int
    //waste_type int    
    //product varchar
    //product_url varchar
    //low_code varchar
    //arrival_time timestamp
    //departure_time timestamp
    //issue_reported varchar
}




Table staff {
    staff_id int [pk]
    employed_by int [ref: > transport_actor.transport_id]
    //formal boolean
    //salary_month int
    //bonus_per_job int
    //use_vehicle boolean
}



Table equipment {
    equip_id int [pk]
    belongs_to int [ref: > transport_actor.transport_id]


}


Table vehicle  {
    vehicle_id int [pk]
    is_part int [ref: < equipment.equip_id]
    //type varchar
    //description varchar
    //model varchar
    //producer varachar
    //model_url varchar
    //purched_on timestamp
    //last_mantaince timestamp
    //mantaince_job varchar
    //mounted_gps boolean
    //permite_ok boolean
    //last_inspection timestamp
    //last_updated varchar
    //updated_by varchar 

}



Table gps_reporting  {
    equip int [ref: > equipment.equip_id]
    //moment timestamp
    //longitude int
    //latitude int
    //scale_weight int
    //waste_type varchar
}



Table storage_actor  {
    storage_id [pk]
    belongs_to int [ref: < actor.actor_id]
    //name varchar
    //capcity int
    //waste_to_store varchar
    //cost_yr int
    //cost_mth int
    //place_description varchar
    //technology varchar
    //percentage_used int
    //last_updated timestamp
    //updated_by varchar 
}


Table recycling_actor {
    recyle_id [pk]
    belongs_to int [ref: < actor.actor_id]
    regulated_by int [ref: > regulation.regulation_id]
    place int [ref: < waste_place.place_id]
    //name varchar
    //capcity int
    //method varchar
    //resource varchar
    //method_description varchar
    //method_url varchar
    //capacity_int int
    //low_used varchar
    //waste_used_descr varchar
    //resource_produced varchar
    //amount_resource int
}


Table resource {
    resource_id int [pk]
    recycle_by int [ref: > recycling_actor.recyle_id]
    regulated_by int [ref: > regulation.regulation_id]
    //amount int
    //value int
    //material_type varchar
    //created timestamp
}

Table ce_consumer_actor [headercolor: #5de89e]{
    user_id [pk]
    belongs_to int [ref: < actor.actor_id]
    //name varchar
    use_resource int [ref: < resource.resource_id]
}


